--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,8 +13,8 @@ $font-path: "../assets/fonts";
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 $text-color:        #000;
-$background-color:  #fff;
-
+$background-color:  #f4f4f4;
+$toolbar-background:#4e3d4a;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -25,7 +25,7 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #0d3c8d,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
